--- a/templates/extract.html
+++ b/templates/extract.html
@@ -4,6 +4,7 @@
         <title>lobster</title>
     </head>
     <body>
-        <h1>Entered URL is {{ url }}</h1>
+        <h1>Extracted Url</h1>
+        {{url}}
     </body>
 </html>
