--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,14 @@
 <html>
     <head>
         <title>lobster</title>
+        <style>
+            h1 {
+                color: red;
+            }
+            body {
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
         <h1>Enter the URL</h1>
