implement download option

--- a/templates/extract.html
+++ b/templates/extract.html
@@ -229,8 +229,8 @@
                     </div>
                 </div>
                 <button id="addLayerBtn">Add</button>
-                <button type="button" onclick="submitForm('/filter')">Filter</button>
-                <button type="button" onclick="submitForm('/download')">Download</button>
+                <button type="button" onclick="submitFilter('/filter')">Filter</button>
+                <button type="button" onclick="submitDownload('/download')">Download</button>
             </form>
 
             <div class="tree-container">
